@@ -9,7 +9,7 @@
   ** Locations of "the most recent snapshot is the Nth" text are 
   ** answers 1_1, 1_4, 4_1, 5_6.
 -->
-<!-- $Id: index.html,v 1.5 2001/03/25 00:01:57 pme Exp $ -->
+<!-- $Id: index.html,v 1.6 2001/04/03 00:26:56 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -96,13 +96,13 @@ http://gcc.gnu.org/onlinedocs/libstdc++/faq/</A>.</P>
 <H1><A NAME="1_0">1.0 General Information</A></H1>
 <!-- I suspect these will mostly be links to/into existing documents. -->
    <H2><A NAME="1_1">1.1 What is libstdc++-v3?</A></H2>
-      <P>The GNU Standard C++ Library v3, or libstdc++-2.90.x/2.9x, is an 
+      <P>The GNU Standard C++ Library v3, or libstdc++-2.9x, is an 
          ongoing project to implement the ISO 14882 Standard C++ library 
          as described in chapters 17 through 27 and annex D.  As the 
          library reaches stable plateaus, it is captured in a snapshot
          and released.  The current release is <A
-HREF="ftp://gcc.gnu.org/pub/libstdc++/libstdc++-2.91.tar.gz">the
-         tenth snapshot</A>.  For those who want to see exactly how
+HREF="ftp://gcc.gnu.org/pub/libstdc++/libstdc++-2.92.tar.gz">the
+         eleventh snapshot</A>.  For those who want to see exactly how
          far the project has come, or just want the latest
          bleeding-edge code, the up-to-date source is available over
          anonymous CVS, and can even be browsed over the Web (see below). 
@@ -154,8 +154,8 @@ HREF="http://gcc.gnu.org/gcc-2.95/buildstat.html">portability</A>
 
 <HR>
    <H2><A NAME="1_4">1.4 How do I get libstdc++?</A></H2>
-      <P>The tenth (and latest) snapshot of libstdc++-v3 is <A
-HREF="ftp://gcc.gnu.org/pub/libstdc++/libstdc++-2.91.tar.gz">
+      <P>The eleventh (and latest) snapshot of libstdc++-v3 is <A
+HREF="ftp://gcc.gnu.org/pub/libstdc++/libstdc++-2.92.tar.gz">
          available via ftp</A>.
       </P>
       <P>The <A HREF="http://gcc.gnu.org/libstdc++/">homepage</A>
@@ -409,56 +409,29 @@ HREF="http://sources.redhat.com/automake/">automake</A>.
 <!-- Yeah, I meant that "verbatim clip" thing literally... :-)  -->
 
 <pre>
-New: 
-- namespace std:: is now on by default.
-- choice of "C" include strategies, including the shadow header work,
-  or generic global to std mapping of required "C" types.
-- cpu/atomicity.h tweaks, additions of ia64 and arm support.
-- abstraction of atomicity.h header to support notion of os/atomicity.h files.
-- addition of backward header bits
-- use of system_header pragma
-- Conditional use of -Werror
-- preliminary support for new g++ diagnostics capabilities, including
-  -fdiagnostics-show-location=once
-- pedantic and shadow argument warning fixes 
-- Ugly, yet correct mechanism for dealing with "C" math adopted,
-  including the use of builtins.
-- updates and configure/build work to support new libtool
-- addition of strstream 
-- valarray work
-- complex work
-- update to SGI STL 3.3
-- libio sync between glibc/libstdc++-v3. Some divergence since initial
-  merge, but sources remain quite close.
-- IO fixes for alpha
-- wide character work for IO when using libio
-- addition of c_io_stdio and "C" IO abstraction layer.
-- auto_ptr fixes, testsuite additions
-- Attempts to use -ffunction-sections -fdata-sections and
-  --gc-sections, depending on use of GNU ld and specific features. As of
-  late, --gc-sections has been disabled due to problems with it throwing
-  away initialization sections. This work is ongoing.
-- long double support
-- sub directory removal, coherent organization of cpu and os-specific
-  files, consolidation of include directories, integration of the C++
-  support bits for operator new/delete,exceptions, etc. All includes
-  are now either in the include/* hierarchy or in libsupc++'s sub directory.
-- Support for more platforms, including irix and bsd variants.
-- filebuf tweaks to deal with variable-size buffers.
-- filebuf implementation for putbackc, etc. al.
-- ctype rewritten. Includes ctype<char>, ctype<wchar_t>, and others.
-- codecvt rewritten. Includes codecvt<char, char, mbstate_t>,
-  codecvt<wchar_t, char, mbstate_t>. In addition,
-  implementation-defined conversions using iconv are now supported with
-  the __enc_traits partial-specialization of the State template
-  parameter of the codecvt class. In this manner, conversions between
-  encodings such as UCS4, USC2, UNICODE, UNICODEBIG, UNICODELITTLE, etc
-  can be performed.
-- preliminary work on named locales
-- preliminary documentation for locale implementation has been established.
-- Many, many bug fixes.
-- Many, many testsuite additions and consistent VERIFY usage.
-- work on mkcheck to make it more flexible, use libtool, etc.
+New:
+---
+- preliminary doxygen documentation has been added. Running &quot;make
+  doxygen&quot; in the libstdc++-v3 build directory will generate HTML
+  documentation that can be used to cross-reference names and files in
+  the library.
+- a dejagnu based testing framework has been added
+- a new implementation of the concept checking code has been ported
+  from the boost libraries.
+- support for -fno-exceptions has been added
+- stdexcept was re-written
+- using deprecated or antiquated headers now gives a warning
+- the stdio interface to iostreams has been tweaked, and now works
+  with synchronized c/c++ io
+- new libsupc++ routines implementing the IA-64 C++ ABI.
+- HPUX configuration files
+- support for AIX added
+- a lot of bugs were fixed.
+- preliminary named locales implemented
+- portability improvements made to generation of &lt;limits&gt;
+- speedups to improve configuration time.
+- DJGPP support added.
+- support for dlopening shared libstdc++
 </pre>
 
 
@@ -681,7 +654,7 @@ HREF="http://gcc.gnu.org/ml/libstdc++/1999/msg00084.html">speculation</A>.
 
 <HR>
    <H2><A NAME="5_6">5.6 Is libstdc++-v3 thread-safe?</A></H2>
-      <P>Quick answer:  no, as of 2.91 (tenth snapshot), the
+      <P>Quick answer:  no, as of 2.92 (eleventh snapshot), the
          library is not appropriate for multithreaded access.  The
          string class is MT-safe.
       </P>
@@ -722,7 +695,7 @@ HREF="http://gcc.gnu.org/ml/libstdc++/1999/msg00084.html">speculation</A>.
 <P CLASS="fineprint"><EM>
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:libstdc++@gcc.gnu.org">the mailing list</A>.
-<BR> $Id: index.html,v 1.5 2001/03/25 00:01:57 pme Exp $
+<BR> $Id: index.html,v 1.6 2001/04/03 00:26:56 pme Exp $
 </EM></P>
 
 
